Feito correcao para funcionamento da movimentacao e fechamento do caixa